clusters/amq/kafdrop-deploymentconfig.yaml

kind: DeploymentConfig
apiVersion: v1
metadata:
  name: my-cluster-kafdrop
  
  labels:
    app: kafdrop
  annotations:
    app.openshift.io/connects-to: events-kafka
    app.openshift.io/vcs-uri: 'https://github.com/obsidiandynamics/kafdrop'
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    name: kafdrop
  template:
    metadata:
      name: kafdrop
      labels:
        name: kafdrop
    spec:
      containers:
        - name: kafdrop
          imagePullPolicy: IfNotPresent
          image: obsidiandynamics/kafdrop
          ports:
            - containerPort: 9000
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            httpGet:
              path: /actuator/health
              port: 9000
              scheme: HTTP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            httpGet:
              path: /actuator/health
              port: 9000
              scheme: HTTP
  triggers:
    - type: ConfigChange
