clusters/amq/kafdrop-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-cluster-kafdrop
  labels:
    app: my-cluster-kafdrop
spec:
  ports:
    - name: 9000-tcp
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    deploymentconfig: my-cluster-kafdrop
